# simulant-engine

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  .prep-dummy-soundcard.sh  .travis.yml  404.tga  Android.mk  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYING-HEADER.txt  Doxyfile  Dreamcast-build.sh  KGLT.cbp  KGLT.config  KGLT.files  KGLT.includes  LICENSE  README.md  TODO-physics.txt  build.gradle  build_for_android.py  conanfile.txt  dc-build.sh  psp-build.sh  settings.gradle  simulant.cbp  simulant.config  simulant.creator.user.c34ddff  simulant.files  simulant.includes  windows-build-release.sh  windows-build.sh
kglt/: CMakeLists.txt  actor.cpp  actor.h  additional.h  animation.cpp  animation.h  application.cpp  application.h  background.cpp  background.h  base.cpp  base.h  batcher.cpp  batcher.h  boundable.h  buffer_object.cpp  buffer_object.h  camera.cpp  camera.h  colour.cpp  colour.h  console.cpp  console.h  debug.cpp  debug.h  entity.cpp  entity.h  extra.h  font.cpp  font.h  framebuffer.h  frustum.cpp  frustum.h  geom.cpp  geom.h  gpu_program.cpp  gpu_program.h  hardware_buffer.cpp  hardware_buffer.h  idle_task_manager.cpp  (+95 more)
kglt/additional/: background.cpp  background.h  sprite.cpp  sprite.h  sprite_strip_loader.cpp  sprite_strip_loader.h
kglt/controllers/: controller.h  fly.h  raycast_vehicle.cpp  raycast_vehicle.h  rigid_body.cpp  rigid_body.h
kglt/extra/: background.cpp  background.h  paragraph.h  skybox.cpp  skybox.h  sprite.cpp  sprite.h  sprite_grid.cpp  sprite_grid.h  sprite_strip_loader.cpp  sprite_strip_loader.h  spritesheet.h
kglt/generic/: algorithm.h  auto_weakptr.h  cloneable.h  creator.h  data_carrier.h  generic_tree.cpp  generic_tree.h  identifiable.h  managed.h  manager.h  manager_base.h  manager_lookup_ptr.h  property.h  protected_ptr.h  refcount_manager.h  relation.h  safe_bool.h  tree.h  tri_octree.h  tri_octree.inl  unique_id.h  user_data_carrier.h  visitor.h
kglt/loaders/: dxf_loader.cpp  dxf_loader.h  heightmap_loader.cpp  heightmap_loader.h  material_script.cpp  material_script.h  md2_loader.cpp  md2_loader.h  obj_loader.cpp  obj_loader.h  ogg_loader.cpp  ogg_loader.h  opt_loader.cpp  opt_loader.h  particle_script.cpp  particle_script.h  pcx_loader.cpp  pcx_loader.h  q2bsp_loader.cpp  q2bsp_loader.h  rml_loader.cpp  rml_loader.h  sprite_loader.cpp  sprite_loader.h  stb_vorbis.c  stb_vorbis.h  texture_loader.cpp  texture_loader.h  tiled_loader.cpp  tiled_loader.h  wal_loader.cpp  wal_loader.h  wavefront_loader.cpp
kglt/loki/: type_manip.h
kglt/lua/: api.cpp  api.h  console.cpp  console.h  interpreter.cpp  interpreter.h  luabind  types.h
kglt/managers/: skybox_manager.cpp  skybox_manager.h  window_holder.h
kglt/materials/: background.kglm  diffuse_render.kglm  generic_multitexture.kglm  multitexture_and_lighting.kglm  simple_texture.kglm
kglt/panels/: panel.h  partitioner_panel.cpp  partitioner_panel.h  stats_panel.cpp  stats_panel.h
kglt/particles/: pixel_trail.kglp  rocket_trail.kglp
kglt/partitioners/: null_partitioner.cpp  null_partitioner.h  octree.cpp  octree.h  octree_partitioner.cpp  octree_partitioner.h  static_chunk.cpp  static_chunk.h
kglt/physics/: bullet_body.h  bullet_engine.h  collidable.cpp  collidable.h  ode_body.cpp  ode_body.h  ode_engine.cpp  ode_engine.h  physics_body.h  physics_engine.cpp  physics_engine.h  responsive_body.cpp  responsive_body.h  types.h
kglt/procedural/: constants.h  geom_factory.cpp  geom_factory.h  mesh.h
kglt/renderers/: generic_renderer.cpp  generic_renderer.h  gpu_program.cpp  gpu_program.h  render_queue.h  renderer.cpp  renderer.h  renderer_config.h
kglt/rendering/: generic_renderer.cpp  generic_renderer.h  selection_renderer.cpp  selection_renderer.h
kglt/screens/: loading.cpp  loading.h  screen.cpp  screen.h  screen_manager.cpp  screen_manager.h
kglt/shaders/: ambient_render.frag  ambient_render.vert  compile_to_c  default_shaders.h  phong_lighting.frag  phong_lighting.vert
kglt/testing/: mock_window.h
kglt/ui/: element.cpp  element.h  interface.cpp  interface.h  label.cpp  label.h  shortcuts.cpp  types.h  (+2 more)
samples/: 2d_sample.cpp  CMakeLists.txt  anim.cpp  anim_skin.cpp  box_drop_sample.cpp  boxes.cpp  cave.cpp  cave_demo.cpp  collada.cpp  combined_sample_1.cpp  fleets_demo.cpp  flightsim.cpp  joypad_sample.cpp  light_sample.cpp  model_viewer.cpp  nehe01.cpp  nehe02.cpp  nehe03.cpp  new_pipeline_sample.cpp  opt_sample.cpp  outline_sample.cpp  parallax_sample.cpp  particles.cpp  path_following.cpp  physics_demo.cpp  q2bsp.cpp  q2bsp_sample.cpp  rtt_sample.cpp  sample.cpp  seek_sample.cpp  selection_sample.cpp  spinner_sample.cpp  terrain_sample.cpp  text_sample.cpp  texture_scroll_sample.cpp  ui_demo.cpp  ui_sample.cpp  viewport_sample.cpp  viewports.cpp  widgets.cpp
simulant/: CMakeLists.txt  actor.cpp  actor.h  animation.cpp  animation.h  application.cpp  application.h  arg_parser.cpp  arg_parser.h  asset.cpp  asset.h  asset_manager.cpp  asset_manager.h  background.cpp  background.h  base.cpp  base.h  build.gradle  camera.cpp  camera.h  color.cpp  color.h  colour.cpp  colour.h  compat.cpp  compat.h  compositor.cpp  compositor.h  core.cpp  core.h  coroutines.cpp  coroutines.h  debug.cpp  debug.h  errors.cpp  errors.h  event_listener.cpp  event_listener.h  extra.h  fog_settings.cpp  (+111 more)
src/: CMakeLists.txt  q2bsp_sample.cpp  sample.cpp
tests/: CMakeLists.txt  global.cpp  global.h  main.cpp  test_aabb.h  test_adjacency.h  test_batcher.h  test_behaviours.h  test_binary.h  test_camera.cpp  test_camera.h  test_contiguous_map.h  test_controllers.h  test_coroutines.h  test_cow_vector.h  test_curve.h  test_debug.h  test_file_ifstream.h  test_frustum.cpp  test_frustum.h  test_frustum_culler.h  test_frustum_partitioner.h  test_generic_tree.h  test_geom.h  test_geometry_buffer.cpp  test_gl2.h  test_gltf.h  test_half_float.h  test_heightmap.h  test_input_controller.h  test_input_manager.h  test_input_state.h  test_json.h  test_kazbase.h  test_layer.h  test_libgl.h  test_loader_dtex.h  test_localisation.h  test_localisation.h.orig  test_loose_octree.h  (+77 more)
(+4326 files in other folders)
